# intel-simd

./: .gitignore  CMakeLists.txt  README.md  config.h  impl.h  impl_avx.h  impl_mmx.h  impl_simd.h  impl_simple.h  impl_sse2.h  main.cpp  rgb.cpp  rgb.h  yuv_420.cpp  yuv_420.h
cmake/: FindSSE.cmake
utils/: base.h  stopwatch.hpp
